FIX: Align topic link with topic statuses (#88)

--- a/assets/stylesheets/d-tooltip.scss
+++ b/assets/stylesheets/d-tooltip.scss
@@ -63,3 +63,10 @@
     line-height: 1.4em;
   }
 }
+
+.topic-list-body .link-top-line {
+  .fk-d-tooltip__trigger,
+  .fk-d-tooltip__trigger-container {
+    display: inline;
+  }
+}
